--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -37,7 +37,20 @@
 
             <button type="submit" class="login-button">Login</button>
         </form>
+        <button id="restore-defaults" class="restore-defaults-button">Restore Defaults</button>
     </div>
 </div>
+
+<div id="confirmation-modal" class="modal" style="display: none;">
+    <div class="modal-content">
+        <p>Are you sure you want to restore defaults? This will delete all user data.</p>
+        <div class="modal-actions">
+            <button id="confirm-delete" class="modal-button confirm">Confirm</button>
+            <button id="cancel-delete" class="modal-button cancel">Cancel</button>
+        </div>
+    </div>
+</div>
+
+<script th:src="@{/js/login.js}"></script>
 </body>
 </html>
